syntax = "proto3";

package users;

option go_package = "./;users";

// Определение сервисов
service UsersService {
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
  rpc GetUserByID (GetUserByIDRequest) returns (GetUserResponse);
  rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse);
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse);
  rpc GetUserByUsername (GetUserByUsernameRequest) returns (GetUserResponse);
}

// Определение сообщений
message CreateUserRequest {
  string username = 1;
  string password_hash = 2;
  string full_name = 3;
}

message CreateUserResponse {
  int32 id = 1;
  string error = 2;
}

message GetUserByIDRequest {
  int32 id = 1;
}

message GetUserByUsernameRequest {
  string username = 1;
}

message GetUserResponse {
  int32 id = 1;
  string username = 2;
  string password_hash = 3;
  string full_name = 4;
  string error = 5;
}

message UpdateUserRequest {
  int32 id = 1;
  string username = 2;
  string password_hash = 3;
  string full_name = 4;
}

message UpdateUserResponse {
  string error = 1;
}

message DeleteUserRequest {
  int32 id = 1;
}

message DeleteUserResponse {
  string error = 1;
}
